rewrite the original code

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
   </head>
   <body>
+    <button class="rock">Rock</button>
+    <button class="scissors">Scissors</button>
+    <button class="paper">Paper</button>
+
+    <div id="result"></div>
+    <div id="score"></div>
+    <div id="final"></div>
     <script src="script.js"></script>
   </body>
 </html>
